--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ aiogram==3.13.1
 python-dotenv==1.0.1
 aiofiles==24.1.0
 aiohttp==3.10.11
-uvloop==0.21.0
-asyncpg==0.29.0
-supabase==2.8.1
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.25
+aiosqlite==0.19.0
